--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Manuel Dona",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.0",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-3": "^6.24.1",
@@ -25,8 +26,9 @@
     "express-promise-router": "^3.0.3",
     "helmet": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
